# ArtieSim

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md
.circleci/: config.yml
analysis/: analysis.py  artieII_analysis.py  artieII_dicer.py  artieII_scuba.py  artieI_analysis.py  artieI_plots.py  artie_analysis.py  cross_section_data.py  dicer_flux.py  dicer_rf.py  energy_profile.py  geant4_cross_sections.py  ntof_profile.py
configs/: artieII_dicer_ideal_long.yaml  artieII_dicer_ideal_medium.yaml  artieII_dicer_ideal_short.yaml  artieII_dicer_vacuum_long.yaml  artieII_dicer_vacuum_medium.yaml  artieII_dicer_vacuum_short.yaml  artieII_ideal_long.yaml  artieII_lanl_ideal_long.yaml  artieII_lanl_vacuum_long.yaml  artieII_ntof_ideal_long.yaml  artieII_ntof_ideal_scuba.yaml  artieII_ntof_ideal_short.yaml  artieII_ntof_vacuum_long.yaml  artieII_ntof_vacuum_scuba.yaml  artieII_ntof_vacuum_short.yaml  artieII_v1.yaml  artieII_vacuum_long.yaml  artieI_argon.yaml  artieI_argon_long.yaml  artieI_argon_short.yaml  artieI_example.yaml  artieI_ideal.yaml  artieI_ideal_argon_short.yaml  artieI_ideal_long.yaml  artieI_ideal_short.yaml  artieI_vacuum.yaml  artieI_vacuum_long.yaml  artieI_vacuum_short.yaml
configs/artieI/: artieI_argon_short.yaml  artieI_example.yaml  artieI_ideal_argon_long.yaml  artieI_ideal_vacuum_long.yaml  artieI_ideal_vacuum_short.yaml
data/: CaseRX55eV100keV125nsPSR.txt  DICER_MARKIII.csv  DICER_MARKIV.csv  DICER_MARKIV_10.0.csv  DICER_MARKIV_100.0.csv  DICER_MARKIV_1000.0.csv  DICER_MARKIV_10000.0.csv  DICER_MARKIV_100000.0.csv  DICER_MARKIV_30000.0.csv  DICER_flux_6Li.root  endf_ar36.csv  endf_ar38.csv  i89_FOVR_6cm_FoldedWith125nsPSR.txt  moderator_hist.root  moderator_rootfile_maker.py
include/: Core.hh
include/actions/: ActionInitialization.hh  ArtieIActionInitialization.hh  ArtieIIDICERActionInitialization.hh  ArtieIInTOFActionInitialization.hh  EventAction.hh  RunAction.hh  SteppingAction.hh  TrackingAction.hh
include/analysis/: Analysis.hh  Generator.hh  Hit.hh  Neutron.hh  Particle.hh  bkgdAnalysis.hh  voxelAnalysis.hh
include/detector/: Detector.hh  DetectorComponent.hh  DetectorConstruction.hh  DetectorFactory.hh  SensitiveDetector.hh
include/detector/ArtieI/: ArtieIDetector.hh  ArtieIDetectorConstruction.hh  ArtieITargetCapDetector.hh
include/detector/ArtieI/ArtieIBeamPipe/: ArtieIBeamPipeLeftBeam.hh  ArtieIBeamPipeLeftPipe.hh  ArtieIBeamPipeRightBeam.hh  ArtieIBeamPipeRightPipe.hh
include/detector/ArtieI/ArtieIHall/: ArtieIHall.hh
include/detector/ArtieI/ArtieITarget/: ArtieITargetActiveVolume.hh  ArtieITargetContainer.hh  ArtieITargetInsulation.hh  ArtieITargetLeftBuffer.hh  ArtieITargetLeftWindow.hh  ArtieITargetRightBuffer.hh  ArtieITargetRightWindow.hh
include/detector/ArtieI/ArtieITargetDetector/: ArtieITargetDetector.hh
include/detector/ArtieII_v1/: ArtieIIDICERDetectorConstruction.hh  ArtieIIDetectorConstruction.hh  ArtieIInTOFDetectorConstruction.hh  ArtieIInTOFSCUBADetectorConstruction.hh
include/detector/ArtieII_v1/Detector/: LiGDetector.hh
include/detector/ArtieII_v1/nTOF/: nTOF.hh
include/detector/ArtieITarget/: ArtieITargetActiveVolume.hh  ArtieITargetDetector.hh
include/detector/argon_cube/: ArgonCubeActiveVolume.hh  ArgonCubeDetector.hh  ArgonCubeXZSiPM.hh
include/generator/: ArtieIGenerator.hh  ArtieIIDICERPrimaryGeneratorAction.hh  ArtieIIPrimaryGeneratorAction.hh  ArtieIInTOFPrimaryGeneratorAction.hh  ArtieIPrimaryGeneratorAction.hh  Generator.hh  PrimaryGeneratorAction.hh
include/manager/: EventManager.hh
include/materials/: Air.hh  Argon.hh  Concrete.hh  Kapton.hh  Material.hh  MaterialFactory.hh  Polyurethane.hh  StainlessSteel.hh  Vacuum.hh  Water.hh
include/physics/: NeutronHPPhysics.hh  PhysicsList.hh  SimplePhysicsList.hh
scripts/: install_endf.sh  install_geant4.sh  prepare_geant4_installation.sh
src/: Core.cxx
src/actions/: ActionInitialization.cxx  ArtieIActionInitialization.cxx  ArtieIIActionInitialization.cxx  ArtieIIDICERActionInitialization.cxx  ArtieIInTOFActionInitialization.cxx  EventAction.cxx  RunAction.cxx  SteppingAction.cxx  TrackingAction.cxx
src/analysis/: Analysis.cxx  Particle.cxx  Trajectory.cxx  bkgdAnalysis.cxx  voxelAnalysis.cxx
src/detector/: Detector.cxx  DetectorComponent.cxx  DetectorConstruction.cxx  DetectorFactory.cxx  SensitiveDetector.cxx
src/detector/ArtieI/: ArtieIDetector.cxx  ArtieIDetectorConstruction.cxx  ArtieITargetCapDetector.cxx
src/detector/ArtieI/ArtieIBeamPipe/: ArtieIBeamPipeLeftBeam.cxx  ArtieIBeamPipeLeftPipe.cxx  ArtieIBeamPipeRightBeam.cxx  ArtieIBeamPipeRightPipe.cxx
src/detector/ArtieI/ArtieIHall/: ArtieIHall.cxx
src/detector/ArtieI/ArtieITarget/: ArtieITargetActiveVolume.cxx  ArtieITargetContainer.cxx  ArtieITargetInsulation.cxx  ArtieITargetLeftBuffer.cxx  ArtieITargetLeftWindow.cxx  ArtieITargetRightBuffer.cxx  ArtieITargetRightWindow.cxx
src/detector/ArtieI/ArtieITargetDetector/: ArtieITargetDetector.cxx
src/detector/ArtieII_v1/: ArtieIIDICERDetectorConstruction.cxx  ArtieIIDetectorConstruction.cxx  ArtieIInTOFDetectorConstruction.cxx  ArtieIInTOFSCUBADetectorConstruction.cxx
src/detector/ArtieII_v1/ArtieIITarget/: MArEXTarget.cxx  Target.cxx
src/detector/ArtieII_v1/DICER/: DICER.cxx
src/detector/ArtieITarget/: ArtieITargetActiveVolume.cxx  ArtieITargetDetector.cxx
src/detector/argon_cube/: ArgonCubeActiveVolume.cxx  ArgonCubeDetector.cxx  ArgonCubeXZSiPM.cxx
src/generator/: ArtieIGenerator.cxx  ArtieIIDICERPrimaryGeneratorAction.cxx  ArtieIIPrimaryGeneratorAction.cxx  ArtieIInTOFPrimaryGeneratorAction.cxx  ArtieIPrimaryGeneratorAction.cxx  Generator.cxx  PrimaryGeneratorAction.cxx
src/manager/: EventManager.cxx
src/materials/: Air.cxx  Argon.cxx  Concrete.cxx  Kapton.cxx  Material.cxx  MaterialFactory.cxx  Polyurethane.cxx  StainlessSteel.cxx  Vacuum.cxx  Water.cxx
src/physics/: NeutronHPPhysics.cxx  PhysicsList.cxx  SimplePhysicsList.cxx
src/programs/: ArgonCube.cc  ArtieI.cc  ArtieII.cc  ArtieIIDICER.cc  ArtieIInTOF.cc  ArtieIInTOFSCUBA.cc  DetectorTest.cc  RunTest.cc
(+5 files in other folders)
